--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Duf</title>
+  <title>Duf file server</title>
   __STYLE__
 </head>
 <body>
