--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  __SLOB__
+  __SLOT__
 </head>
 <body>
   <div class="head">
