--- a/assets/index.html
+++ b/assets/index.html
@@ -31,9 +31,15 @@
     </form>
   </div>
   <div class="main">
-    <div class="uploaders">
-    </div>
-    <table>
+    <table class="uploaders-table hidden">
+      <thead>
+        <tr>
+          <th class="cell-name">Name</th>
+          <th class="cell-status">Status</th>
+        </tr>
+      </thead>
+    </table>
+    <table class="paths-table hidden">
       <thead>
         <tr>
           <th class="cell-name">Name</th>
