--- a/assets/index.html
+++ b/assets/index.html
@@ -31,6 +31,7 @@
     </form>
   </div>
   <div class="main">
+    <div class="empty-folder hidden"></div>
     <table class="uploaders-table hidden">
       <thead>
         <tr>
