feat: display upload speed and time left

--- a/assets/index.html
+++ b/assets/index.html
@@ -36,7 +36,7 @@
       <thead>
         <tr>
           <th class="cell-name">Name</th>
-          <th class="cell-status">Status</th>
+          <th class="cell-status">Speed - Progress - Time Left</th>
         </tr>
       </thead>
     </table>
