increased the reactivity of the webpage

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,7 +35,7 @@
     <table class="uploaders-table hidden">
       <thead>
         <tr>
-          <th class="cell-name">Name</th>
+          <th class="cell-name" colspan="2">Name</th>
           <th class="cell-status">Speed - Progress - Time Left</th>
         </tr>
       </thead>
@@ -43,8 +43,8 @@
     <table class="paths-table hidden">
       <thead>
         <tr>
-          <th class="cell-name">Name</th>
-          <th class="cell-mtime">Date modify</th>
+          <th class="cell-name" colspan="2">Name</th>
+          <th class="cell-mtime">Last modified</th>
           <th class="cell-size">Size</th>
           <th class="cell-actions">Actions</th>
         </tr>
