chore: adjust ui

--- a/assets/index.html
+++ b/assets/index.html
@@ -36,7 +36,7 @@
       <thead>
         <tr>
           <th class="cell-name" colspan="2">Name</th>
-          <th class="cell-status">Speed - Progress - Time Left</th>
+          <th class="cell-status">Progress</th>
         </tr>
       </thead>
     </table>
